# laikago_ws

./: .gitignore  .gitmodules  .gitmodules.swp  README.md  tags
laikago_ros/laikago_controller/: CMakeLists.txt  package.xml
laikago_ros/laikago_controller/src/: test_gazebo_control.cpp  test_joint_control.cpp
laikago_ros/laikago_description/: package.xml
laikago_ros/laikago_description/launch/: check_joint.rviz  velodyne.rviz
laikago_ros/laikago_description/urdf/: laikago.urdf
laikago_ros/laikago_description/xacro/: plugins.xacro  robot.xacro
laikago_ros/laikago_gazebo/: CMakeLists.txt  package.xml
laikago_ros/laikago_gazebo/config/: laikago.rviz
laikago_ros/laikago_gazebo/launch/: gazebo.xacro  laikago_ahg_nav.launch  normal.launch  simple.launch
laikago_ros/laikago_gazebo/launch/world/: normal.world  test_humantrajectory.world
laikago_ros/laikago_gazebo/src/exe/: test_gazebo_pos_control.cpp
laikago_ros/laikago_navigation/: CMakeLists.txt  package.xml
laikago_ros/laikago_navigation/config/: amcl_params.yaml  costmap_common_params.yaml  costmap_common_params_laser.yaml
laikago_ros/laikago_navigation/launch/: amcl.launch  amcl_diff.launch  laikago_ahg_nav.launch  move_base.launch
laikago_ros/laikago_real/: CMakeLists.txt
