<?xml version="1.0"?>
<package format="2">
    <name>laikago_controller</name>
    <version>0.0.0</version>
    <description>The laikago_controller package</description>
    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>controller_interface</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>controller_interface</build_export_depend>
    <build_export_depend>hardware_interface</build_export_depend>
    <build_export_depend>pluginlib</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>controller_interface</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <depend>laikago_msgs</depend>
    <build_depend>laikago_gazebo</build_depend>
    <exec_depend>laikago_gazebo</exec_depend>

    <build_depend>controller_manager</build_depend>
    <exec_depend>controller_manager</exec_depend>
    <build_depend>genmsg</build_depend>
    <exec_depend>genmsg</exec_depend>
    <build_depend>joint_state_controller</build_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <build_depend>robot_state_publisher</build_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <build_depend>gazebo_ros</build_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_depend>tf</build_depend>
    <exec_depend>tf</exec_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <build_depend>nodelet</build_depend>
    <exec_depend>nodelet</exec_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <controller_interface plugin="${prefix}/laikago_controller_plugin.xml"/>
    </export>
</package>